<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_legislators"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/legislators"/>
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bills"/>
        <item
            android:id="@+id/nav_committees"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/committees"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/favorites"/>
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_me"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_me"/>
        </menu>
    </item>

</menu>
